ISTO-147 Fix outstanding level 7 CVEs